# OpenMenuStandard-rs

./: Cargo.toml  README.md  Spec_README.md  USAGE.md
src/: document.rs  lib.rs  types.rs  url.rs  utils.rs  validation.rs
