[package]
name = "open_menu_standard"
version = "0.1.0"
edition = "2021"
authors = ["Tristan Poland", "Tyler Poland", "OpenMenuStandard Contributors"]
description = "Rust implementation of the OpenMenuStandard (OMS) specification"
license = "MIT"
repository = "https://github.com/openmenustandard/rust-oms"
readme = "README.md"
keywords = ["food", "restaurant", "menu", "ordering", "standard"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
url = "2.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
base64 = "0.22.1"
reqwest = { version = "0.12.15", features = ["json"], optional = true }
tokio = { version = "1.26", features = ["full"], optional = true }
qrcode = { version = "0.14.1", optional = true }
image = { version = "0.25.6", optional = true }
regex = { version = "1.8", features = ["unicode"] }
once_cell = "1.17"
lazy_static = "1.4"

[features]
default = []
network = ["reqwest", "tokio"]
qr = ["qrcode", "image"]
tap-to-order = ["network", "qr"]
all = ["network", "qr", "tap-to-order"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.3"
pretty_assertions = "1.3"